@@ -1,3 +1,9 @@
+2014-08-19  James Hunt  <james.hunt@ubuntu.com>
+
+	* src/procenv.c: Restore Coverity 0.0 defect density:
+	  - translate(): Cleanup on error path.
+	  - pstring_create(): Cleanup on error path.
+
 2014-08-14  James Hunt  <james.hunt@ubuntu.com>
 
 	* man/procenv.1: More examples.
